tdf#116283 oox customXml: Don't write the Relationship to DOCX files twice.

Change-Id: Id3da40138e86c142707e377aa897df372aacb704
Reviewed-on: https://gerrit.libreoffice.org/50947
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
Tested-by: Jan Holesovsky <kendy@collabora.com>
(cherry picked from commit bf5c486946f2b0a708a251c8ff614293ae37c6ba)